<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="vertical">
		<Button android:id="@+id/btnBattery" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/btnBatteryLevel" />


		<Button android:id="@+id/btnWS" android:text="@string/callWS"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
			
	   <Button android:id="@+id/btnConnectivity" android:text="@string/connectivity"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
            
      <Button android:id="@+id/btnGoogleMap" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/btnGoogleMapText" />
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">


		<ListView android:id="@android:id/list" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<TextView android:id="@android:id/empty"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/no_friends" />


	</LinearLayout>

</LinearLayout>